src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>RFP_Team_RMS_FBR_Jail_IQ__c</fullName>
        <label>RFP Team - RMS/FBR/Jail/IQ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>David Amaya</fullName>
                </value>
                <value>
                    <fullName>Karen Southerland</fullName>
                </value>
                <value>
                    <fullName>Matt Klein</fullName>
                </value>
                <value>
                    <fullName>TC Thomas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Team_Solutions_Architect__c</fullName>
        <label>RFP Team - Solutions Architect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Darrell Richards</fullName>
                </value>
                <value>
                    <fullName>David Tima</fullName>
                </value>
                <value>
                    <fullName>Del Pullen</fullName>
                </value>
                <value>
                    <fullName>Kurt Hallmeyer</fullName>
                </value>
                <value>
                    <fullName>Matt Manzano</fullName>
                </value>
                <value>
                    <fullName>Keith Singleton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Type__c</fullName>
        <inlineHelpText>Select the type of reporting system the customer wants implemented.</inlineHelpText>
        <label>RMS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UCR</fullName>
                </value>
                <value>
                    <fullName>NIBRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_TriTech_Lost__c</fullName>
        <label>Reason TriTech Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Feature/Function</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>Out-Sold</fullName>
                </value>
                <value>
                    <fullName>Lack of PreSales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_TriTech_Won__c</fullName>
        <label>Reason TriTech Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add-On Order</fullName>
                </value>
                <value>
                    <fullName>Feature/Function</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Fees__c</fullName>
        <label>Recurring Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Red_Team_Assignments_Due_Date__c</fullName>
        <label>Assignments Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Red_Team_Date__c</fullName>
        <label>Red Team Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registered_Affiliates__c</fullName>
        <label>Registered Affiliates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ben Whitley</fullName>
                </value>
                <value>
                    <fullName>Craig Noel</fullName>
                </value>
                <value>
                    <fullName>Dick Buss</fullName>
                </value>
                <value>
                    <fullName>Doug Jones</fullName>
                </value>
                <value>
                    <fullName>Frontier</fullName>
                </value>
                <value>
                    <fullName>ICS/Keefe</fullName>
                </value>
                <value>
                    <fullName>IES</fullName>
                </value>
                <value>
                    <fullName>Indigital</fullName>
                </value>
                <value>
                    <fullName>Jerry Skinner</fullName>
                </value>
                <value>
                    <fullName>JMB</fullName>
                </value>
                <value>
                    <fullName>King Carter</fullName>
                </value>
                <value>
                    <fullName>Michael Davis</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>Salesgroup</fullName>
                </value>
                <value>
                    <fullName>Spok</fullName>
                </value>
                <value>
                    <fullName>Tommie Lopez</fullName>
                </value>
                <value>
                    <fullName>Valence</fullName>
                </value>
                <value>
                    <fullName>Vsigner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Quality_w_the_Key_contact__c</fullName>
        <label>xRelationship Quality w/the Key contact?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seen as Partner/Trusted Advisor</fullName>
                </value>
                <value>
                    <fullName>Seen as Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Seen as a Viable Option</fullName>
                </value>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Not in Good Standing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Products__c</fullName>
        <description>Text version field of the Products(s) Required field for use with reporting snapshots.</description>
        <formula>IF(INCLUDES(Products_Required__c , &quot;3rd Party&quot;), &quot;3rd Party; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;911&quot;), &quot;911; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;911 Consulting&quot;), &quot;911 Consulting; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Accident Reporting (Extend)&quot;), &quot;Accident Reporting (Extend); &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Administration&quot;), &quot;Administration; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;CAD&quot;), &quot;CAD; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;CDP&quot;), &quot;CDP; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Civil&quot;), &quot;Civil; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Data Vault&quot;), &quot;Data Vault; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;DispatchNow&quot;), &quot;DispatchNow; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;eCitations (Extend)&quot;), &quot;eCitations (Extend); &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;FBR&quot;), &quot;FBR; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;FBR (Extend)&quot;), &quot;FBR (Extend); &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Field Ops&quot;), &quot;Field Ops; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Financial&quot;), &quot;Financial; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Hardware&quot;), &quot;Hardware; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Insight AVL&quot;), &quot;Insight AVL; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Insight Dispatch&quot;), &quot;Insight Dispatch; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Insight Mobile&quot;), &quot;Insight Mobile; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;IQ/Analytics&quot;), &quot;IQ/Analytics; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;IQResponse&quot;), &quot;IQResponse; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Jail&quot;), &quot;Jail; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Jail Extend&quot;), &quot;Jail Extend; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;LETG Add On&quot;), &quot;LETG Add On; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;LETG eCitations&quot;), &quot;LETG eCitations; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Mapping (Zuercher)&quot;), &quot;Mapping (Zuercher); &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Mobile&quot;), &quot;Mobile; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Municipal Courts&quot;), &quot;Municipal Courts; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Personnel&quot;), &quot;Personnel; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Portal&quot;), &quot;Portal; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Property &amp; Evidence (Extend)&quot;), &quot;Property &amp; Evidence (Extend); &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Prosecution&quot;), &quot;Prosecution; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Records&quot;), &quot;Records; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Reporting&quot;), &quot;Reporting; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Respond Billing&quot;), &quot;Respond Billing; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Respond CAD&quot;), &quot;Respond CAD; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;RMS&quot;), &quot;RMS; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Support&quot;), &quot;Support; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Tiburon Analytics&quot;), &quot;Tiburon Analytics; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;TotalCommand&quot;), &quot;TotalCommand; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Total Enforcement&quot;), &quot;Total Enforcement; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Training&quot;), &quot;Training; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;Travel&quot;), &quot;Travel; &quot;, NULL) +
IF(INCLUDES(Products_Required__c , &quot;TriTech.com Billing&quot;), &quot;TriTech.com Billing&quot;, NULL)</formula>
        <label>Required Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_to_Approval_Step__c</fullName>
        <label>Return to Approval Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return to Step 1</fullName>
                </value>
                <value>
                    <fullName>Return to Step 2</fullName>
                </value>
                <value>
                    <fullName>Return to Step 3</fullName>
                </value>
                <value>
                    <fullName>Return to Step 4</fullName>
                </value>
                <value>
                    <fullName>Return to Step 5</fullName>
                </value>
                <value>
                    <fullName>Return to Step 6</fullName>
                </value>
                <value>
                    <fullName>Return to Step 7</fullName>
                </value>
                <value>
                    <fullName>Return to Step 8</fullName>
                </value>
                <value>
                    <fullName>Return to Step 9</fullName>
                </value>
                <value>
                    <fullName>Return to Step 10</fullName>
                </value>
                <value>
                    <fullName>Return to Step 11</fullName>
                </value>
                <value>
                    <fullName>Return to Step 12</fullName>
                </value>
                <value>
                    <fullName>Return to Step 13</fullName>
                </value>
                <value>
                    <fullName>Return to Step 14</fullName>
                </value>
                <value>
                    <fullName>Return to Step 15</fullName>
                </value>
                <value>
                    <fullName>Return to Step 16</fullName>
                </value>
                <value>
                    <fullName>Return to Step 17</fullName>
                </value>
                <value>
                    <fullName>Return to Step 18</fullName>
                </value>
                <value>
                    <fullName>Return to Step 19</fullName>
                </value>
                <value>
                    <fullName>Return to Step 20</fullName>
                </value>
                <value>
                    <fullName>Return to Step 21</fullName>
                </value>
                <value>
                    <fullName>Return to Step 22</fullName>
                </value>
                <value>
                    <fullName>Return to Step 23</fullName>
                </value>
                <value>
                    <fullName>Return to Step 24</fullName>
                </value>
                <value>
                    <fullName>Return to Step 25</fullName>
                </value>
                <value>
                    <fullName>Return to Step 26</fullName>
                </value>
                <value>
                    <fullName>Return to Step 27</fullName>
                </value>
                <value>
                    <fullName>Return to Step 28</fullName>
                </value>
                <value>
                    <fullName>Return to Step 29</fullName>
                </value>
                <value>
                    <fullName>Return to Step 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAR_Meeting_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAR Meeting Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>Quote sales order number</description>
        <label>Sales Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Director approval only on opportunities</description>
        <label>Selected - Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_VP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VP of Sales approval only on opportunities</description>
        <label>Selected - VP Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection_Date__c</fullName>
        <label>Selection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Population_Tier__c</fullName>
        <description>Pulls &quot;Service Population Tier&quot; from the Account page.</description>
        <formula>TEXT(Account.Service_Population_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Population Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <formula>Account.Shipping_City_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <formula>TEXT (Account.Shipping_Country_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <formula>TEXT ( Account.Shipping_State_WMP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <formula>Account.Shipping_Street_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <formula>Account.Shipping_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortlisted_Date__c</fullName>
        <label>Shortlisted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solutions_Definition_Review_Date__c</fullName>
        <label>Solution Definition Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_of_Shortlist_Announcement__c</fullName>
        <label>Source of Shortlist Announcement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_budget_information__c</fullName>
        <label>Source of budget information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>CJIS</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Term_Years__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Subscription Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Opp_Scoring_Account_Plan_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Plan Created = 2 Points for Target Opportunity Scoring</inlineHelpText>
        <label>Target Opp Scoring: Account Plan Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Opp_Scoring_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Demo = 4 Points for Target Opportunity Scoring</inlineHelpText>
        <label>Target Opp Scoring: Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Opp_Scoring_Meeting_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Meeting In Person = 2 Points for Target Opportunity Scoring</inlineHelpText>
        <label>Target Opp Scoring: Meeting In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Opp_Scoring_Quote_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quote Created = 2 Points for Target Opportunity Scoring</inlineHelpText>
        <label>Target Opp Scoring: Quote Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Opportunity_Paid__c</fullName>
        <description>MBO tracking for target opportunities that are paid.  Visibility limited to Sys Admins, Jenni Hastie and Bob K.</description>
        <label>Target Opportunity Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Opportunity_Score__c</fullName>
        <formula>IF(Target_Opp_Scoring_Demo__c, 4, 0) +
IF(Target_Opp_Scoring_Quote_Created__c, 2, 0) +
IF(Target_Opp_Scoring_Meeting_In_Person__c, 2, 0) +
IF(Target_Opp_Scoring_Account_Plan_Created__c, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the score based on the four Target Opp Scoring checkbox fields</inlineHelpText>
        <label>Target Opportunity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if opportunity/account has been deemed a target by Management.</inlineHelpText>
        <label>Target Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Calculated tax amount from the quote.  This amount will be deducted from the quote total to give us the &quot;Actual Opportunity Value&quot;.</description>
        <inlineHelpText>Calculated tax amount from the associated quote for this opportunity.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_GM__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Third Party GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Custom_Solution__c</fullName>
        <label>Total Custom Solution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hardware__c</fullName>
        <label>Total Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Implementation_Service_Fees__c</fullName>
        <description>Quote&apos;s total implementation service fees</description>
        <label>Total Implementation Service Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Maintenance__c</fullName>
        <label>Total Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Related_Fees__c</fullName>
        <description>Total project related fees from quote</description>
        <label>Total Project Related Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quoted_Amount__c</fullName>
        <description>After quote sync, the Total Quoted Amount listed includes SW, HW, Custom Products, Third Party Products or Services, Recurring Fees, Shipping and Fixed Fee Travel Costs if applicable.  Maintenance is included for Existing Business quotes.</description>
        <inlineHelpText>After quote sync, the Total Quoted Amount listed includes SW, HW, Services, Custom Products, Third Party Products or Services, Recurring Fees, Shipping and Fixed Fee Travel Costs if applicable.  Maintenance is included for Existing Business quotes.</inlineHelpText>
        <label>Total Quoted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Fees__c</fullName>
        <label>Total Recurring Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Software__c</fullName>
        <label>Total Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_T_and_E_Amount__c</fullName>
        <label>Total T and E Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Third_Party__c</fullName>
        <label>Total Third Party</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriTech_Selected__c</fullName>
        <label>TriTech Selected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriTech_Shortlisted__c</fullName>
        <label>TriTech Shortlisted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Selection__c</fullName>
        <label>Source of Selection Announcement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Amount__c</fullName>
        <description>Amount * Probability</description>
        <formula>Actual_Opportunity_Value__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weighted amount =Actual Opportunity Value x Probability</inlineHelpText>
        <label>Weighted Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_TriTech_s_competitive_position__c</fullName>
        <label>xWhat is TriTech’s competitive position?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech Can Compete but Must Defend Position</fullName>
                </value>
                <value>
                    <fullName>It’s an Open Market</fullName>
                </value>
                <value>
                    <fullName>TriTech Can Compete but They Need to Displace Competition</fullName>
                </value>
                <value>
                    <fullName>TriTech Will Be Locked Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_potential_deal_size__c</fullName>
        <label>xWhat is the potential deal size?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;$1 Million</fullName>
                </value>
                <value>
                    <fullName>$500K - $1 Million</fullName>
                </value>
                <value>
                    <fullName>$0 - $500K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_purchasing_structure__c</fullName>
        <label>xWhat is the purchasing structure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Win_Strategy_PDP_Date__c</fullName>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <inlineHelpText>If the deal was lost, list who TriTech lost the deal to</inlineHelpText>
        <label>Winning Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X180_Day_Expiration_Date__c</fullName>
        <description>If Most Recent Approval Level = Quote Approved - Final, then calculate the approved date plus 180 days and show that date.</description>
        <formula>If(ISPICKVAL(Most_Recent_Approval_Level__c,&quot;Quote Approved - Final&quot;),Last_Approval_Date__c + 180,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expiration date = Quote Approved Final Date + 180 days.</inlineHelpText>
        <label>180 Day Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yearly_Fee__c</fullName>
        <description>Syncs over from Endeavor</description>
        <label>Yearly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Z_AE_Have_they_seen_the_product__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>(AE) Have they seen the product?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Z_AE_What_are_our_win_themes__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>(AE) What are our win themes?</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Z_AE_Who_are_the_decision_makers__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>(AE) Who are the decision makers?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Z_AE_of_visits__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>(AE) # of visits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Z_Annual_Hosting_Fee__c</fullName>
        <label>Annual Hosting Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Z_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Z_Are_there_product_gaps__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>Are there product gaps?</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Z_CAD_911__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD + 911</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_CAD_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_COGS__c</fullName>
        <label>COGS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Z_Civil_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Civil Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_Close_Date_Notes__c</fullName>
        <label>Close Date Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Z_Concurrent_Users__c</fullName>
        <label>Concurrent Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z_Content_creation_notes__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>Content creation notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Z_Contract_concerns__c</fullName>
        <description>Part of the Zuercher RFP Go/No Go criteria section (Zuercher competitive Opps only)</description>
        <label>Contract concerns</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
</CustomObject>